Removed exception, not available on esp32

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-
 [env:featheresp32]
 platform = espressif32
 board = featheresp32
@@ -16,4 +15,4 @@ framework = espidf
 
 ; Serial Monitor options
 monitor_baud = 115200
-build_flags = -fexceptions
+//build_flags = -fexceptions
