--- a/.cproject
+++ b/.cproject
@@ -21,7 +21,6 @@
 							<builder arguments="${IDF_PATH}/tools/windows/eclipse_make.py -j 6" command="python" id="cdt.managedbuild.target.gnu.builder.cygwin.base.659736666" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.cygwin.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.cygwin.base.870758280" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.cygwin.base">
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1265650861" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
-
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.cygwin.base.690933577" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.cygwin.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base.1886228056" name="Cygwin C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base">
@@ -65,14 +64,20 @@
 			</target>
 		</buildTargets>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499;cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499.1181334674;cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base.342012807;cdt.managedbuild.tool.gnu.cpp.compiler.input.cygwin.1221258875">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243;cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243.69898470;cdt.managedbuild.tool.gnu.c.compiler.cygwin.base.1969024996;cdt.managedbuild.tool.gnu.c.compiler.input.cygwin.1132228257">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499;cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499.1181334674;cdt.managedbuild.tool.gnu.c.compiler.cygwin.base.2103934886;cdt.managedbuild.tool.gnu.c.compiler.input.cygwin.1176402899">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243;cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243.69898470;cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base.1886228056;cdt.managedbuild.tool.gnu.cpp.compiler.input.cygwin.781397961">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499;cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499.1181334674;cdt.managedbuild.tool.gnu.cpp.compiler.cygwin.base.342012807;cdt.managedbuild.tool.gnu.cpp.compiler.input.cygwin.1221258875">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
 	</storageModule>
-	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
