--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -23,12 +23,9 @@ environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/BATCH_
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/BATCH_BUILD/value=1
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/IDF_PATH/delimiter=;
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/IDF_PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/IDF_PATH/value=/home/jop/esp/esp-idf;C\:/ESP32/esp-idf
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/PATH/value=C\:\\msys32\\usr\\bin;C\:\\msys32\\mingw32\\bin;C\:\\msys32\\opt\\xtensa-esp32-elf\\bin
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/IDF_PATH/value=/home/jop/esp/esp-idf
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/V/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/V/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/V/value=1
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/append=true
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/python/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/python/operation=append
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2114805243/python/value=python
