--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -7,6 +7,17 @@ environment/project/cdt.managedbuild.toolchain.gnu.base.1651560860/V/operation=a
 environment/project/cdt.managedbuild.toolchain.gnu.base.1651560860/V/value=1
 environment/project/cdt.managedbuild.toolchain.gnu.base.1651560860/append=true
 environment/project/cdt.managedbuild.toolchain.gnu.base.1651560860/appendContributed=true
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/BATCH_BUILD/delimiter=;
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/BATCH_BUILD/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/BATCH_BUILD/value=1
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/IDF_PATH/delimiter=;
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/IDF_PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/IDF_PATH/value=C\:\\msys32\\home\\casper.rebholz\\esp\\esp-idf
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/PATH/delimiter=;
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/PATH/value=C\:\\msys32\\usr\\bin;C\:\\msys32\\mingw32\\bin;C\:\\msys32\\opt\\xtensa-esp32-elf\\bin
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083/appendContributed=true
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499/BATCH_BUILD/delimiter=;
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499/BATCH_BUILD/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.2020044499/BATCH_BUILD/value=1
