--- a/.cproject
+++ b/.cproject
@@ -50,6 +50,9 @@
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/aws_iot/aws-iot-device-sdk-embedded-C/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/fatfs/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/wear_levelling/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casper.rebholz\git\ACTS-Sensor\build&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casper.rebholz\git\ACTS-Sensor&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1653131367" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
