--- a/.cproject
+++ b/.cproject
@@ -14,11 +14,11 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration buildProperties="" description="" id="cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
+				<configuration artifactName="${ProjName}" buildProperties="" description="" id="cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
 					<folderInfo id="cdt.managedbuild.toolchain.gnu.cygwin.base.1115492083.2055123316" name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.cygwin.base.1765722635" name="Cygwin GCC" superClass="cdt.managedbuild.toolchain.gnu.cygwin.base">
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.Cygwin_PE" id="cdt.managedbuild.target.gnu.platform.cygwin.base.209683155" name="Debug Platform" osList="win32" superClass="cdt.managedbuild.target.gnu.platform.cygwin.base"/>
-							<builder command="make" id="cdt.managedbuild.target.gnu.builder.cygwin.base.805395037" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.cygwin.base"/>
+							<builder arguments="${IDF_PATH}/tools/windows/eclipse_make.py" command="python" id="cdt.managedbuild.target.gnu.builder.cygwin.base.805395037" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.cygwin.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.cygwin.base.627069927" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.cygwin.base">
 								<option id="gnu.both.asm.option.include.paths.1262944736" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;C:\Users\casper.rebholz\Downloads\FreeRTOSv10.0.1\FreeRTOS\Source\include&quot;"/>
@@ -53,6 +53,20 @@
 									<listOptionValue builtIn="false" value="&quot;C:\Users\casper.rebholz\git\ACTS-Sensor\build&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\Users\casper.rebholz\git\ACTS-Sensor&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\msys32&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\FreeRTOSv10.0.1&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\esp_adc_cal\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\esp_adc_cal&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\sdmmc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\freertos&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lwip&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\caspe\Git\ACTS-Stress&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb2\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb2&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\nr&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\nr\include&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1653131367" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -97,6 +111,18 @@
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/aws_iot/aws-iot-device-sdk-embedded-C/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/fatfs/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/wear_levelling/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\esp_adc_cal&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\sdmmc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\freertos&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lwip&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\caspe\Git\ACTS-Stress&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb2\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb2&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\nr&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\nr\include&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.cygwin.1132389960" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input.cygwin"/>
 							</tool>
@@ -141,6 +167,18 @@
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/aws_iot/aws-iot-device-sdk-embedded-C/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/fatfs/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/wear_levelling/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\esp_adc_cal&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\sdmmc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\freertos&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lwip&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\caspe\Git\ACTS-Stress&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb2\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb2&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\lomb&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\nr&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\msys32\home\caspe\esp\esp-idf\components\nr\include&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.cygwin.1049642149" superClass="cdt.managedbuild.tool.gnu.c.compiler.input.cygwin"/>
 							</tool>
